# noscope

./: .gitignore  AGENTS.md  Cargo.toml  README.md  statesman.toml
.beads/: issues.jsonl  metadata.json
.beads/provenance-drafts/: noscope-2wn.md  noscope-3ed.md  noscope-3ez.3.md  noscope-3ez.7.md  noscope-3ez.9.md  noscope-4in.md  noscope-4mw.md  noscope-4of.md  noscope-5dw.md  noscope-5wl.md  noscope-66m.md  noscope-6a9.md  noscope-7d5.md  noscope-7r6.md  noscope-9l0.md  noscope-ad8.md  noscope-bsq.1.1.md  noscope-bsq.1.2.md  noscope-bsq.1.3.md  noscope-bsq.1.4.md  noscope-bsq.1.5.md  noscope-cg8.2.md  noscope-cg8.3.md  noscope-cg8.4.md  noscope-cg8.5.md  noscope-f75.md  noscope-ia2.md  noscope-mpl.md  noscope-pmr.md  noscope-prw.md  noscope-s9i.md  noscope-ydb.md  noscope-ydn.md
.beads/session-logs/: noscope-2wn-20260330-013657.log.prompt  noscope-3ed-20260330-174915.log.prompt  noscope-3ez.1-20260331-190200.log.prompt  noscope-3ez.10-20260331-193552.log.prompt  noscope-3ez.11-20260331-194629.log.prompt  noscope-3ez.2-20260331-185533.log.prompt  noscope-3ez.3-20260331-192315.log.prompt  noscope-3ez.4-20260331-195244.log.prompt  noscope-3ez.5-20260331-200155.log.prompt  noscope-3ez.7-20260331-191639.log.prompt  noscope-3ez.8-20260331-192131.log.prompt  (+40 more)
benches/: redaction.rs
docs/: QUICKSTART.md
scripts/: drain-beads.sh
src/: agent_process.rs  ci_checks.rs  cli.rs  cli_adapter.rs  client.rs  command_parse.rs  config_path.rs  credential_set.rs  error.rs  event.rs  event_emission_wiring_tests.rs  exit_code.rs  integration_runtime.rs  lib.rs  main.rs  mint.rs  orchestrator.rs  parse_command_shared_tests.rs  process_group.rs  profile.rs  provider.rs  provider_exec.rs  redaction.rs  refresh.rs  run_signal_loop_consolidation_tests.rs  run_signal_wiring.rs  security.rs  signal_policy.rs  token.rs  token_convert.rs  token_provider.rs
tests/: cli_output_contract.rs  cmd_mint_wiring.rs  integration_test_suite.rs  noscope_3ed_edition.rs  noscope_3ez_7_docs.rs  noscope_f75_os_signal_wiring.rs  signal_handling_policy.rs
(+13 files in other folders)
