[package]
name = "noscope"
version = "0.1.0"
edition = "2024"
description = "Subprocess credential lifecycle manager"

[dependencies]
secrecy = "0.10"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
libc = "0.2"
chrono = "0.4"

[dev-dependencies]
static_assertions = "1.1"
serde = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "redaction"
harness = false
