[package]
name = "noscope"
version = "0.1.0"
edition = "2024"
description = "Subprocess credential lifecycle manager"

[dependencies]
secrecy = "0.10"
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "signal", "time", "sync"] }

[dev-dependencies]
static_assertions = "1.1"
serde = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio = { version = "1", features = ["macros"] }

[[bench]]
name = "redaction"
harness = false
